--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
 baseURL = "https://www.choraleapp.com"
 title = "Chorale Music"
-languageCode = "en-US"
+languageCode = "en"
+pluralizelisttitles = false
