--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,4 @@
 [context.deploy-preview.environment]
-  HUGO_VERSION = "0.26"
+  HUGO_VERSION = "0.29"
+[context.production.environment]
+  HUGO_VERSION = "0.29"
